--- a/.github/workflows/update_all_plantuml_theme_file.yml
+++ b/.github/workflows/update_all_plantuml_theme_file.yml
@@ -14,7 +14,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # Runs a single command using the runners shell
-      - name: Run `update_lib`
+      - name: Run `give_all_plantuml_theme.sh`
         run: |
           chmod +x script/give_all_plantuml_theme.sh
           ./script/give_all_plantuml_theme.sh
