--- a/.github/workflows/generate_all_puml_for_all_theme.yml
+++ b/.github/workflows/generate_all_puml_for_all_theme.yml
@@ -1,4 +1,4 @@
-name: Generate puml gallery: all puml for all theme
+name: Generate puml gallery (all puml for all theme)
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
