--- a/.github/workflows/update_all_plantuml_theme_file.yml
+++ b/.github/workflows/update_all_plantuml_theme_file.yml
@@ -1,4 +1,4 @@
-name: Update `all_plantuml_theme.txt` file
+name: Run `give_all_plantuml_theme` script
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -6,7 +6,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job
-  update_all_plantuml_theme_file:
+  give_all_plantuml_theme:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
