--- a/.github/workflows/generate_all_puml_for_all_theme.yml
+++ b/.github/workflows/generate_all_puml_for_all_theme.yml
@@ -17,7 +17,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run `generate_all_puml_for_all_theme.pl`
         run: |
-          mkdir gallery
+          mkdir -p gallery
           perl -w script/generate_all_puml_for_all_theme.pl
       # Runs  Commit the changes, if any
       - name: Commit the changes, if any
