--- a/.github/workflows/give_all_input_file.yml
+++ b/.github/workflows/give_all_input_file.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Commit the changes, if any
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Update input_files
+          commit_message: Update input files
