--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,34 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username: The-Lum
 
+# Collection settings
+collections:
+  themes:
+    output: true
+  diagrams:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "diagrams"
+    values:
+      layout: "diagram"
+  - scope:
+      path: ""
+      type: "themes"
+    values:
+      layout: "theme"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
 # Build settings
 #theme: jekyll-theme-dinky
 remote_theme: pages-themes/dinky@v0.2.0
