Show diagram's code on diagram pages and link to theme's definition
Issue: #3

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ defaults:
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 csv_reader:
   converters: []
