Improve gallery view
Also adds more links for easier navigation between themes, diagrams and their dedicated pages.

Thanks to @runjak for his help with everything frontend related ;)

Issue: #3

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,16 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username: The-Lum
 
+default_theme:
+  name: _none_
+  display_name: Plain Theme
+  url: /themes/_none_.html
+
+default_diagram:
+  name: Deployment
+  display_name: Deployment Diagram
+  url: /diagrams/Deployment.html
+
 # Collection settings
 collections_dir: collections
 collections:
