Adjust configs and scripts to moved diagram definitions
Issue: #3

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 collections/_diagrams/input/*.puml linguist-detectable
-gallery/*.puml -linguist-detectable
+gallery/themed-input/*.puml -linguist-detectable
