--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ show_downloads: false
 # Any item listed under the `exclude:` key here will be automatically added to
 # the internal "default list".
 exclude:
-  - gallery
+  - gallery/themed-input
   - lib
   - script
   - README.md
