--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title: PlantUML Theme Gallery
 #email: your-email@example.com
 description: >-
   A gallery of all the themes included with PlantUML.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username: The-Lum
 
