✏️ fix typo on mainNavigation.yml

--- a/_data/mainNavigation.yml
+++ b/_data/mainNavigation.yml
@@ -30,4 +30,4 @@
 #  link: /diagrams/gallery.html
 - name: Standard Libs Overview
   kind: stdlibs
-  link: /sdtlibs/index.html
+  link: /stdlibs/index.html
