--- a/_data/mainNavigation.yml
+++ b/_data/mainNavigation.yml
@@ -28,6 +28,6 @@
 #- name: Diagrams Gallery
 #  kind: diagrams
 #  link: /diagrams/gallery.html
-- name: Standard Libs Overview
+- name: StdLibs Overview
   kind: stdlibs
   link: /stdlibs/index.html
