--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,7 @@ show_downloads: false
 # the internal "default list".
 exclude:
   - gallery/themed-input
+  - input
   - lib
   - script
   - README.md
