Combine diagram variants into one document (#11)
* Combine multiple diagrams collection documents into one per diagram type

* Adjust dedicated page layouts to include the diagram's variants too

Issue: #5

* Borrow diagram descriptions from PlantUML directly

Issue: #5

* Add matching author information

Issue: #5

* Fix internal link structure and incorporate the baseurl again

* Update Activity.md

* Update Class.md

* Update Deployment.md

* Update EBNF.md

* Update Gantt.md

* Update JSON.md

* Update Mindmap.md

* Update Nwdiag.md

* Update REGEX.md

* Update Sequence.md

* Update State.md

* Update Timing.md

* Update UseCase.md

* Update WBS.md

* Update YAML.md

* Update Object.md

* Update Salt.md

* Update readme.md

* Update _config.yml

---------

Co-authored-by: The-Lum <86879521+The-Lum@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ collections:
       - plantuml.md
   diagrams:
     output: true
+    sort_by: plantuml_order
   stdlibs:
     output: true
 
@@ -131,6 +132,7 @@ show_downloads: false
 # the internal "default list".
 exclude:
   - gallery/themed-input
+  - input
   - lib
   - script
   - README.md
